@@ -1,0 +1,27 @@
+.\"
+.\" Copyright (c) 2024 Luiz Antônio Rangel
+.\"
+.\" SPDX-Licence-Identifier: Zlib
+.\"
+.TH REV 1 "07/21/24" "Heirloom Toolchest" "User Commands"
+.SH NAME
+rev \- reverse lines of a file 
+.SH SYNOPSIS
+\fBrev\fR [\fIfile\fR]
+.SH DESCRIPTION
+.I Rev
+copies the lines of the specified
+files to the standard output, but
+reversing the order of characters.
+If no file is specified, it reads
+from the standard input.
+.SH NOTES
+This
+.I rev
+supports internationalisation. In
+varietate concordia.
+.SH HISTORY
+A
+.I rev
+command first appeared in UNIX 6th
+Edition.
