@@ -1,9 +1,11 @@
 Release ...
+* rev: UTF-8 support, borrowed from suckless sbase. In varietate concordia.
 * [NEW] apply, pick: Complete implementation for both apply and pick, from
   Research UNIX 8th and 10th respectively; extended payloads for pick in
   comparison with the original implementation.
 * seq: Support for counting from negative numbers to positive or making a
   negative sequence.
+* rev: Full refactor (made by Samuel Brederodes).
 * Fixes for building dynamically on Arch Linux and other GNU C
   Library-based Linux systems which ships exclusively dynamic versions
   of its libraries, also remove `readlink_ucb' object file at `readlink/'
@@ -13,6 +15,7 @@ Release ...
   is not used as much on most common architectures such as x86
   (patch by Samuel Brederodes).
 * watch: `use_default_colors()', do not force black and white.
+* [NEW] rev: New implementation, not capable of UTF-8 yet.
 * cpio, diff, tabs: Fix duplicated definitions (made/reported by crumbtoo,
   merged by me, Luiz Antônio Rangel). Thanks! --- or better: Merci!
 * rm: Added real support for the POSIX 1003.1(2008) standard, implemented
